@@ -3,14 +3,13 @@ package baseball.view;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class InputView {
 
     public static final String USER_NUMBER_REX = "^[1-9]+$";
     public static final String INVALID_USER_NUMBER_MESSAGE = "유효하지 않은 입력입니다.";
     public static final String GAME_START_MESSAGE = "숫자 야구 게임을 시작합니다.";
-    public static final String INPUT_MESSAGE = "숫자를 입력해주세요 :";
+    public static final String INPUT_MESSAGE = "숫자를 입력해주세요 : ";
 
     public void printGameStart() {
         System.out.println(GAME_START_MESSAGE);
@@ -27,12 +26,12 @@ public class InputView {
 
     private List<Integer> mapList(String userNumber) {
         return userNumber.chars()
-                .boxed()
-                .collect(Collectors.toList());
+                .mapToObj(Character::getNumericValue)
+                .toList();
     }
 
     private void validationUserNumber(String userNumber) {
-        if (isNumeric(userNumber)) {
+        if (!isNumeric(userNumber)) {
             throw new IllegalArgumentException(INVALID_USER_NUMBER_MESSAGE);
         }
     }
